# GLights

./: .gitignore  GLights.glade  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  main.cpp
includes/: Communicator.h  GlightsAboutDialog.h  GlightsConnectDialog.h  GlightsNewRoundDialog.h  GlightsTimerDialog.h  UpdateThread.h  aipprotocol.h
src/: Communicator.cpp  GLights.glade  GLights.glade~  GlightsAboutDialog.cpp  GlightsConnectDialog.cpp  GlightsNewRoundDialog.cpp  GlightsTimerDialog.cpp  UpdateThread.cpp
